# 1337-c0d3

./: .gitignore  CMakeLists.txt  README.md
cpp/: 10. regular-expression-matching.cpp  100. same-tree.cpp  101. symmetric-tree.cpp  11. container-with-most-water.cpp  12. integer-to-roman.cpp  13. roman-to-integer.cpp  14. longest-common-prefix.cpp  15. 3-sum.cpp  16. 3-sum-closest.cpp  17. letter-combinations-of-a-phone-number.cpp  18. 4-sum.cpp  19. remove-nth-node-from-end-of-list.cpp  20. valid-parentheses.cpp  21. merge-two-sorted-lists.cpp  22. generate-parentheses.cpp  23. merge-k-sorted-lists.cpp  24. swap-nodes-in-pairs.cpp  25. reverse-nodes-in-k-group.cpp  26. remove-duplicates-from-sorted-array.cpp  27. remove-element.cpp  28. find-the-index-of-the-first-occurrence-in-a-string.cpp  29. divide-two-integers.cpp  31. next-permutation.cpp  33. search-in-rotated-sorted-array.cpp  34. find-first-and-last-position-of-element-in-sorted-array.cpp  35. search-insert-position.cpp  36. valid-sudoku.cpp  38. count-and-say.cpp  39. combination-sum.cpp  40. combination-sum-ii.cpp  42. trapping-rain-water.cpp  43. multiply-strings.cpp  45. jump-game-ii.cpp  46. permutations.cpp  47. permutations-ii.cpp  48. rotate-image.cpp  49. group-anagrams.cpp  50. pow(x, n).cpp  53. maximum-subarray.cpp  54. spiral-matrix.cpp  (+42 more)
cpp/include/: linked_list.h
javascript/: 1. two-sum.js  12. integer-to-roman.js  13. roman-to-integer.js  14. longest-common-prefix.js  20. valid-parentheses.js  26. remove-duplicates-from-sorted-array.js  27. remove-element.js  53. maximum-subarray.js  6. zigzag-conversion.js  66. plus-one.js  67. add-binary.js  70. climbing-stairs.js  9. palindrome-number.js
python/: 1. two-sum.py  11. container-with-most-water.py  15. 3-sum.py  2. add-two-numbers.py  20. valid-parentheses.py  22. generate-parentheses.py  3. longest-substring-without-repeating-characters.py  34. find-first-and-last-position-of-element-in-sorted-array.py  36. valid-sudoku.py  4. median-of-two-sorted-arrays.py  42. trapping-rain-water.py  45. jump-game-ii.py  46. permutations.py  47. permutations-ii.py  48. rotate-image.py  49. group-anagrams.py  5. longest-palindromic-substring.py  54. spiral-matrix.py  55. jump-game.py  62. unique-paths.py  63. unique-paths-ii.py  64. minimum-path-sum.py  75. sort-colors.py  77. combinations.py  78. subsets.py  90. subsets-ii.py
