cmake_minimum_required(VERSION 3.26)

set(PROJECT_NAME "1337_c0d3")
project(${PROJECT_NAME})

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(${PROJECT_NAME}_7 "cpp/7. reverse-integer.cpp")
add_executable(${PROJECT_NAME}_8 "cpp/8. string-to-integer.cpp")
add_executable(${PROJECT_NAME}_9 "cpp/9. palindrome-number.cpp")
add_executable(${PROJECT_NAME}_10 "cpp/10. regular-expression-matching.cpp")
add_executable(${PROJECT_NAME}_11 "cpp/11. container-with-most-water.cpp")
add_executable(${PROJECT_NAME}_12 "cpp/12. integer-to-roman.cpp")
add_executable(${PROJECT_NAME}_13 "cpp/13. roman-to-integer.cpp")
add_executable(${PROJECT_NAME}_14 "cpp/14. longest-common-prefix.cpp")
add_executable(${PROJECT_NAME}_15 "cpp/15. 3-sum.cpp")
add_executable(${PROJECT_NAME}_16 "cpp/16. 3-sum-closest.cpp")
add_executable(${PROJECT_NAME}_17 "cpp/17. letter-combinations-of-a-phone-number.cpp")
add_executable(${PROJECT_NAME}_18 "cpp/18. 4-sum.cpp")
add_executable(${PROJECT_NAME}_19 "cpp/19. remove-nth-node-from-end-of-list.cpp")
add_executable(${PROJECT_NAME}_20 "cpp/20. valid-parentheses.cpp")
add_executable(${PROJECT_NAME}_21 "cpp/21. merge-two-sorted-lists.cpp")
add_executable(${PROJECT_NAME}_22 "cpp/22. generate-parentheses.cpp")
add_executable(${PROJECT_NAME}_23 "cpp/23. merge-k-sorted-lists.cpp")
#add_executable(${PROJECT_NAME}_24 "cpp/24. swap-nodes-in-pairs.cpp")
#add_executable(${PROJECT_NAME}_25 "cpp/25. reverse-nodes-in-k-group.cpp")
add_executable(${PROJECT_NAME}_26 "cpp/26. remove-duplicates-from-sorted-array.cpp")
add_executable(${PROJECT_NAME}_27 "cpp/27. remove-element.cpp")
add_executable(${PROJECT_NAME}_28 "cpp/28. find-the-index-of-the-first-occurrence-in-a-string.cpp")
add_executable(${PROJECT_NAME}_29 "cpp/29. divide-two-integers.cpp")
#add_executable(${PROJECT_NAME}_30 "cpp/30. substring-with-concatenation-of-all-words.cpp")
add_executable(${PROJECT_NAME}_31 "cpp/31. next-permutation.cpp")
#add_executable(${PROJECT_NAME}_32 "cpp/32. longest-valid-parenthesis.cpp")
add_executable(${PROJECT_NAME}_33 "cpp/33. search-in-rotated-sorted-array.cpp")
add_executable(${PROJECT_NAME}_34 "cpp/34. find-first-and-last-position-of-element-in-sorted-array.cpp")
